@@ -5,6 +5,7 @@ x.x:
 1.0.0 ():
  - upgrade for 1.9+
  - record pageviews in separate table, don't pollute annotations
+ - pageview recording off by default
  - Note: this is a BC break for pageviews, old data will not show in the queries
 
 0.5 ():
